Modify Foil detection, to ensure accuracy. Change how searching on market is represented. Modify the Foil badge button to not destroy other parameters. Add Normal badge button to Foil badge page. Add min and max to inventory page jumper.

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -487,3 +487,9 @@ img.platform_small, .platform_img {
 	z-index: 0;
 	left: 0px;
 }
+.es_card_search {
+	padding:0px 2px;
+	margin-top: 2px;
+	display:block;
+	width:220px;
+}
